--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -5,36 +5,282 @@
   year = 2009
 }
 
-@article{NIPoPoWs,
-    author = {Kiayias A. and Miller A. and Zindros D.},
-    title = {Non-interactive proofs of proof-of-work},
-    journal = {IACR Cryptology ePrint Archive},
-    year = {2017},
-    url = {https://eprint.iacr.org/2017/963.pdf}
+@inproceedings{nipopows,
+	Author = {Kiayias, Aggelos and Miller, Andrew and Zindros, Dionysis},
+	Title = {{Non-Interactive Proofs of Proof-of-Work}},
+	booktitle={International Conference on Financial Cryptography and Data Security},
+	organization={Springer},
+	Year = {2020},
 }
 
-@article{Zamyatin,
-    author = {Zamyatin A. and Stifter N. and Judmayer A. and Schindler P. and Weippl E. and Knottenbelt W.J. },
-    title = {A Wild Velvet Fork Appears! Inclusive Blockchain Protocol Changes in Practice},
-    journal = {Zohar A. et al. (eds) Financial Cryptography and Data Security. FC 2018},
-    year = {2019},
-    url = {https://eprint.iacr.org/2017/963.pdf}
+@inproceedings{velvet,
+	Author = {Zamyatin, Alexei and Stifter, Nicholas and Judmayer, Aljosha and Schindler, Philipp and Weippl, Edgar and Knottenbelt, William and Zamyatin, Alexei},
+	Booktitle = {International Conference on Financial Cryptography and Data Security},
+	Organization = {Springer},
+	Title = {A Wild Velvet Fork Appears! Inclusive Blockchain Protocol Changes in Practice},
+	Year = {2018},
+  url = {https://eprint.iacr.org/2017/963.pdf}
 }
 
-@article{Backbone,
-    author = {Juan Garay and Aggelos Kiayias and Nikos Leonardos },
-    title = {The bitcoin backbone protocol: Analysis and applications},
-    journal = {Annual International Conference on the Theory and Applications of Cryptographic Techniques},
-	pages = {281-310},
-	publisher = {Springer},
-    year = {2015}
+@article{backbone,
+  author = {Juan Garay and Aggelos Kiayias and Nikos Leonardos },
+  title = {The bitcoin backbone protocol: Analysis and applications},
+  journal = {Annual International Conference on the Theory and Applications of Cryptographic Techniques},
+  pages = {281-310},
+  publisher = {Springer},
+  year = {2015}
 }
 
-@misc{selfish_mining,
-    title={Majority is not Enough: Bitcoin Mining is Vulnerable},
-    author={Ittay Eyal and Emin Gun Sirer},
-    year={2013},
-    eprint={1311.0243},
-    archivePrefix={arXiv},
-    primaryClass={cs.CR}
+@inproceedings{selfish,
+  title={Majority is not enough: Bitcoin mining is vulnerable},
+  author={Eyal, Ittay and Sirer, Emin G{\"u}n},
+  booktitle={International conference on financial cryptography and data security},
+  pages={436--454},
+  year={2014},
+  organization={Springer}
+}
+
+@article{ethanos,
+  title={Ethanos: Lightweight Bootstrapping for Ethereum},
+  author={Kim, Jae-Yun and Lee, Jun-Mo and Koo, Yeon-Jae and Park, Sang-Hyeon and Moon, Soo-Mook},
+  journal={arXiv preprint arXiv:1911.05953},
+  year={2019}
+}
+
+@article{edrax,
+  title={Edrax: A Cryptocurrency with Stateless Transaction Validation.},
+  author={Chepurnoy, Alexander and Papamanthou, Charalampos and Zhang, Yupeng},
+  journal={IACR Cryptology ePrint Archive},
+  volume={2018},
+  pages={968},
+  year={2018}
+}
+
+@article{wood,
+	Author = {Wood, Gavin},
+	Journal = {Ethereum Project Yellow Paper},
+	Pages = {1--32},
+	Title = {Ethereum: A secure decentralised generalised transaction ledger},
+	Volume = {151},
+	Year = {2014}
+}
+
+@article{buterin,
+	Author = {Buterin, Vitalik and others},
+	Journal = {white paper},
+	Title = {A next-generation smart contract and decentralized application platform},
+	Year = {2014}
+}
+
+@online{buterinforks,
+  author={Vitalik Buterin},
+  title={Hard Forks, Soft Forks, Defaults and Coercion},
+  year={2017},
+  url={http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm},
+  urldate={2017-03-14}
+}
+
+@inproceedings{pow,
+  title={Pricing via processing or combatting junk mail},
+  author={Dwork, Cynthia and Naor, Moni},
+  booktitle={Annual International Cryptology Conference},
+  pages={139--147},
+  year={1992},
+  organization={Springer}
+}
+
+@inproceedings{compactsuperblocks,
+  title={Compact Storage of Superblocks for NIPoPoW Applications},
+  booktitle={The 1st International Conference on Mathematical Research for Blockchain Economy},
+  author={Karantias, Kostis and Kiayias, Aggelos and Zindros, Dionysis},
+  organization={Springer Nature},
+  year={2019}
+}
+
+@inproceedings{pow-sidechains,
+  title={Proof-of-Work Sidechains},
+  author={Kiayias, Aggelos and Zindros, Dionysis},
+	booktitle={International Conference on Financial Cryptography and Data Security},
+	organization={Springer},
+	publisher={Springer},
+	year={2019}
+}
+
+@article{flyclient,
+  title={Flyclient: Super-Light Clients for Cryptocurrencies.},
+  author={B{\"u}nz, Benedikt and Kiffer, Lucianna and Luu, Loi and Zamani, Mahdi},
+  booktitle={To appear in 2020 IEEE Symposium on Security and Privacy (SP)},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{schnorr,
+  title={Efficient identification and signatures for smart cards},
+  author={Schnorr, Claus-Peter},
+  booktitle={Conference on the Theory and Application of Cryptology},
+  pages={239--252},
+  year={1989},
+  organization={Springer}
+}
+
+@article{coda,
+  title={{CODA: Decentralized Cryptocurrency at Scale}},
+  author={Meckler, Izaak and Shapiro, Evan},
+  year={2018}
+}
+
+@inproceedings{fiatshamir,
+  title={{How to prove yourself: Practical solutions to identification and signature problems}},
+  author={Fiat, Amos and Shamir, Adi},
+  booktitle={Conference on the theory and application of cryptographic techniques},
+  pages={186--194},
+  year={1986},
+  organization={Springer}
+}
+
+@inproceedings{eclipse,
+  title={Eclipse Attacks on Bitcoin's Peer-to-Peer Network.},
+  author={Heilman, Ethan and Kendler, Alison and Zohar, Aviv and Goldberg, Sharon},
+  booktitle={USENIX Security Symposium},
+  pages={129--144},
+  year={2015}
+}
+
+@techreport{eclipse-ethereum,
+  title={Ethereum eclipse attacks},
+  author={W{\"u}st, Karl and Gervais, Arthur},
+  year={2016},
+  institution={ETH Zurich}
+}
+
+@inproceedings{merkle,
+  title={A digital signature based on a conventional encryption function},
+  author={Merkle, Ralph C},
+  booktitle={Conference on the Theory and Application of Cryptographic Techniques},
+  pages={369--378},
+  year={1987},
+  organization={Springer}
+}
+
+@misc{mmr,
+	Author = {Peter Todd},
+	Note = {\url{https://github.com/opentimestamps/opentimestamps-server/blob/master/doc/merkle-mountain-range.md}},
+	Title = {Merkle Mountain Ranges},
+	Year = {October 2012}
+}
+
+@article{ct,
+  title={RFC6962: Certificate Transparency},
+  author={Laurie, Ben and Langley, Adam and Kasper, Emilia},
+  journal={Request for Comments. IETF},
+  year={2013}
+}
+
+@misc{ergo,
+  title={{Ergo: A Resilient Platform For Contractual Money}},
+  author={ERGO Developers},
+  year={2019},
+  note={\url{https://ergoplatform.org/docs/whitepaper.pdf}}
+}
+
+@booklet{segwit,
+  author={Lombrozo, Eric and Lau, Johnson and Wuille, Pieter},
+  title="{BIP} 0141: {Segregated witness (consensus layer)}",
+  year="2015",
+  howpublished="Available at: \url{https://github.com/bitcoin/bips/blob/master/bip-0141.mediawiki}",
+}
+
+@inproceedings{burn,
+  title={Proof-of-Burn},
+  author={Karantias, Kostis and Kiayias, Aggelos and Zindros, Dionysis},
+  booktitle={International Conference on Financial Cryptography and Data Security},
+  year={2019}
+}
+
+@misc{derivatives,
+  author={Karantias, Kostis and Kiayias, Aggelos and Zindros, Dionysis},
+	Title = {Smart Contract Derivatives},
+	Year = {2020},
+	institution={Cryptology ePrint Archive, Report 2020/138, 2020.}
+}
+
+@misc{crosschain-sok,
+  title={{SoK: Communication across distributed ledgers}},
+  author={Zamyatin, Alexei and Al-Bassam, Mustafa and Zindros, Dionysis and Kokoris-Kogias, Eleftherios and Moreno-Sanchez, Pedro and Kiayias, Aggelos and Knottenbelt, William J},
+  year={2019},
+  institution={Cryptology ePrint Archive, Report 2019/1128, 2019.}
+}
+
+@inproceedings{pos-sidechains,
+  title={Proof-of-Stake Sidechains},
+  author={Kiayias, Aggelos and Ga{\v z}i, Peter and Zindros, Dionysis},
+  booktitle={IEEE Symposium on Security and Privacy},
+  organization={IEEE},
+  publisher={IEEE},
+	year={2019}
+}
+
+@phdthesis{dionyziz,
+  title={Decentralized Blockchain Interoperability},
+  author={Zindros, Dionysis},
+  year={2020},
+  month={Apr},
+  publisher={University of Athens}
+}
+
+@unpublished{logspace,
+  author={Aggelos Kiayias and Nikos Leonardos and Dionysis Zindros},
+  title={{Mining in Logarithmic Space}},
+	note={Unpublished Manuscript},
+  address={Athens, Greece},
+  year={2020}
+}
+
+@inproceedings{ro,
+  title={Random oracles are practical: A paradigm for designing efficient protocols},
+  author={Bellare, Mihir and Rogaway, Phillip},
+  booktitle={Proceedings of the 1st ACM conference on Computer and communications security},
+  pages={62--73},
+  year={1993},
+  organization={ACM}
+}
+
+@inproceedings{popow,
+    title={Proofs of Proofs of Work with Sublinear Complexity},
+    author={Kiayias, Aggelos and Lamprou, Nikolaos and Stouka, Aikaterini-Panagiota},
+    booktitle={International Conference on Financial Cryptography and Data Security},
+    pages={61--78},
+    year={2016},
+    organization={Springer}
+}
+
+@book{lakatos,
+  title={{Proofs and refutations: The logic of mathematical discovery}},
+  author={Lakatos, Imre},
+  year={2015},
+  publisher={Cambridge University Press}
+}
+
+@MastersThesis{gtklocker,
+  author={Kostis Karantias},
+  title={{Enabling NIPoPoW Applications on Bitcoin Cash}},
+  school={University of Ioannina},
+  address={Ioannina, Greece},
+  year={2019}
+}
+
+@inproceedings{Wattenhofer,
+  author={C. {Decker} and R. {Wattenhofer}},
+  booktitle={IEEE P2P 2013 Proceedings},
+  title={Information propagation in the Bitcoin network},
+  year={2013},
+  volume={},
+  number={},
+  pages={1-10}}
+
+@misc{nakamoto-simple,
+  title={Analysis of nakamoto consensus},
+  author={Ling Ren},
+  year={2019},
+  institution={Cryptology ePrint Archive, Report 2019/943, 2019.}
 }
